--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Luckiest+Guy&family=Oleo+Script:wght@400;700&family=Playwrite+IT+Moderna:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&family=League+Spartan:wght@100..900&family=Luckiest+Guy&family=Oleo+Script:wght@400;700&family=Playwrite+IT+Moderna:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root{
+:root, :root[data-theme="dark"]{
     --primary-color: #F0F0F0;
 
     --primary-bg-color: #111217;
@@ -12,6 +13,25 @@
     --text-color: #9A9A9C;
     --link-color: #9A9A9C;
     --icon-color: #C7C8C9;
+}
+
+:root[data-theme="light"]{
+    --primary-color: #0B0B0F;
+    
+    --primary-bg-color: #E9E9E9;
+    --secondary-bg-color: #C7C8C9;
+    --border-color: #C7C8C9;
+
+    --title-color: #0B0B0F;
+    --text-color: #28292E;
+    --link-color: #28292E;
+    --icon-color: #56575A;
+
+}
+
+html[dark-theme="light"] .brand__logo{
+    filter: invert(1);
+
 }
 
 *{
@@ -25,14 +45,38 @@
 body{
     background: var(--primary-bg-color);
     font-family: 'Inter', Helvetica, sans-serif;
+    color: var(--text-color);
 }
 
 a{
     text-decoration: none;
+    color: var(--text-color);
 }
+
+a:hover{
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
 
 i{
     color: var(--icon-color);
+}
+
+h1{
+    font-size: 2.5rem;
+}
+
+h1, h2,h3{
+    font-family: 'League Spartan', Verdana,  Tahoma, sans-serif;
+    text-transform: uppercase;
+    color: var(--primary-color);
+    font-weight: 200;
+}
+
+p{
+    font-size: 1.25rem;
+    text-align: justify;
 }
 
 .header{
@@ -44,6 +88,12 @@ i{
     padding: 0.5rem 1rem;
 }
 
+.header__toggle{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
 .header__brand .brand__logo{
     width: 3.25rem;
     height: 3.25rem;
@@ -52,6 +102,8 @@ i{
 #toggletheme{
     font-size: 1.5rem;
     color: var(--primary-color);
+    cursor: pointer;
+    transition: ease-in-out .4s;
 
 }
 
@@ -84,10 +136,13 @@ i{
 
 .menu__icon, .menu__text{
     color: var(--text-color);
+
 }
 
 .menu__link.active .menu__icon,
-.menu__link.active .menu__text{
+.menu__link.active .menu__text,
+.menu__link:hover .menu__icon,
+.menu__link:hover .menu__text{
     color: var(--primary-color);
     font-weight: 600;
 }
@@ -100,9 +155,221 @@ i{
 font-size: .75rem;
 text-transform: uppercase
 }
+.header__nav{
+    display: none;
+}
+
+.menu--principal{
+    gap: 1rem;
+}
+
+.menu--social{
+    gap: 1rem;
+}
+
+.btn{
+    display: flex;
+    gap: 0.625rem;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background: transparent;
+    border-radius: 3.125rem;
+    padding: .875rem 1.5rem;
+    cursor: pointer;
+    transition: ease-in-out .3s;
+}
+
+.btn:hover{
+    transform: scale(1.05);
+    transition: ease-in-out .3s;
+}
+
+.btn span, .btn i{
+    font-size: 1.25rem;
+     text-transform: uppercase;
+}
+
+.btn--primary span{
+        color: var(--primary-color);
+       
+}
+
+.btn--primary{
+        border: 1px solid #F0F0F0;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 2.5rem 1rem;
+}
+
+.main__content1{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+}
+.skills{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.25rem;
+    flex-direction: column;
+    padding: 6.25rem 2rem 2rem 1rem;
+    background: var(--secondary-bg-color);
+
+}
+
+.skills h2{
+    text-transform: none;
+}
+
+.skills__list{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.72rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.skills__item{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 4.8rem;
+    width: 4.8rem;
+    aspect-ratio: 1/1;
+    border: 1px solid var(--icon-color);
+    border-radius: 50rem;
+}
+
+.skills__logo{
+    height: 2.4rem;
+}
+
+/* Garante que o footer não fique escondido atrás da nav--mobile */
+footer {
+  text-align: center;
+  padding: 1rem;
+  margin-bottom: 5rem; 
+  color: var(--text-color);
+
+}
+
+footer p{
+    font-size: .875rem;
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
 
 @media (min-width: 768px){
-    .menu--mobile{
+    .header{
+        position: fixed;
+        border-bottom: 1px solid var(--border-color);
+        padding: 1rem 6rem;
+        background: var(--primary-bg-color);
+    }
+    .nav--mobile{
         display: none;
+    }
+
+    .header__nav{
+    display: flex;
+    }
+    
+    .header__nav,
+    .header__toggle{
+        min-width: 30%;
+    }
+
+    h1{
+        font-size: 4rem;
+    }
+
+    main{
+        padding: 8rem 6rem 4rem 6rem
+    }
+
+    .main__content1{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5rem;
+        
+    }
+
+    .skills{
+        gap: 1.25rem    ;
+        padding: 6.25rem 2rem 2rem 1rem;
+    }
+    
+
+    .footer{
+        margin: 0;
+    }
+
+}
+
+@media (min-width: 1200px){
+
+    main{
+        padding: 12rem 6rem 2rem;
+    }
+
+    .main__content1 .btn{
+        width: auto;
+    }
+
+    .skills{
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10rem 6rem 4rem;
+        
+    }
+
+    .skills h2{
+        font-size: 2.5rem;
+        width: 60%;
+    }
+
+    .skills__list{
+        gap: 1rem;
+    }
+
+    .skills__item{
+        width: 6rem;
+        height: 6rem;
+    }
+
+    .skills__logo{
+        height: 3rem;
+    }
+}
+
+
+@media (min-width: 1400px){
+
+    p{
+        font-size: 1.5rem;
+    }
+
+    h1{
+        font-size: 6.25rem;
+    }
+    .header{
+        padding: 1rem 15rem;
+    }
+
+    main{
+        padding: 12rem 15rem 2rem;
+    }
+
+    .skills{
+        padding: 10rem 15rem 4rem;
     }
 }
